k8s/deployments/AWS_DEV/aws_dev_deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: testharness
  labels:
    run: expressproxy-svc
  name: expressproxy-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      run: expressproxy-svc
  template:
    metadata:
      labels:
        run: expressproxy-svc
    spec:
      containers:
      - name: expressproxy-svc
        image: 460570964411.dkr.ecr.us-west-2.amazonaws.com/charter/raven/testharness:svcV4
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      restartPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: testharness
  labels:
    run: expressproxy-ui
  name: expressproxy-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      run: expressproxy-ui
  template:
    metadata:
      labels:
        run: expressproxy-ui
    spec:
      containers:
      - name: expressproxy-ui
        image: 460570964411.dkr.ecr.us-west-2.amazonaws.com/charter/raven/testharness:uiV1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
      restartPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: testharness
  name: expressproxy-svc-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: expressproxy-svc
          servicePort: 8080
        path: /
---
apiVersion: v1
kind: Service
metadata:
  namespace: testharness
  name: expressproxy-svc
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: api
  selector:
    run: expressproxy-svc
---
apiVersion: v1
kind: Service
metadata:
  namespace: testharness
  name: expressproxy-ui
spec:
  type: NodePort
  ports:
  - port: 3000
    name: web
    protocol: TCP
    targetPort: 3000
  selector:
    run: expressproxy-ui
---
apiVersion: v1
kind: Service
metadata:
  namespace: testharness
  labels:
    run: expressproxy-ui
  name: expressproxy-lb
spec:
  selector:
    run: expressproxy-ui
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  namespace: testharness
  labels:
    app: postgresql
  name: postgressql-lb
spec:
  selector:
    app: postgresql
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  sessionAffinity: None
  type: LoadBalancer
